# DesCartes

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY
des-axum/: Cargo.toml
des-axum/examples/: hello_world.rs
des-axum/src/: addr.rs  client.rs  lib.rs  server.rs  transport.rs  util.rs  wire.rs
des-axum/tests/: e2e_open_loop_queue_rate_limit.rs
des-components/: Cargo.toml  README.md
des-components/examples/: client_retry_example.rs  end_to_end_workload_example.rs  export_metrics_example.rs  metrics_retrieval_example.rs  mmk_queueing_example.rs  retry_example.rs  service_builder_demo.rs  task_usage.rs  tonic_end_to_end_example.rs  tower_with_tasks.rs  visualize_metrics_example.rs
des-components/src/: builder.rs  client.rs  dists.rs  error.rs  execute.rs  lib.rs  queue.rs  request.rs  retry_policy.rs  server.rs  simple_client.rs  simple_server.rs  tower.rs
des-components/src/tonic/: client.rs  codec.rs  des_client.rs  des_server.rs  error.rs  mod.rs  server.rs  transport_router.rs
des-components/src/tower/: future_poller.rs  mod.rs
des-components/src/tower/circuit_breaker/: mod.rs
des-components/src/tower/hedge/: mod.rs
des-components/src/tower/limit/: mod.rs
des-components/src/tower/limit/concurrency/: mod.rs
des-components/src/tower/load_balancer/: mod.rs
des-components/src/tower/retry/: mod.rs
des-components/src/tower/service/: mod.rs
des-components/src/tower/timeout/: mod.rs
des-components/src/transport/: endpoint_registry.rs  mod.rs  network_model.rs  sim_transport.rs
des-components/tests/: advanced_examples.rs  client_retry_integration.rs.old  client_server_communication.rs  client_server_integration.rs.old  determinism.rs  retry_integration.rs  server_queue_integration.rs.old  simple_integration.rs  task_implementations.rs  tower_end_to_end.rs  tower_exponential_traffic.rs
des-core/: Cargo.toml
des-core/examples/: logging_demo.rs  logging_env_demo.rs  metastable_retry_storm.rs
des-core/src/: async_runtime.rs  dists.rs  error.rs  execute.rs  formal.rs  ids.rs  lib.rs  logging.rs  metrics.rs  randomness.rs  request.rs  scheduler.rs  task.rs  time.rs  types.rs  waker.rs
des-core/src/attic/: environment.rs  event.bak  process.bak
des-core/tests/: async_client_server.rs  deferred_wake_after.rs  determinism.rs  deterministic_ids.rs  frontier_policy.rs  generator_consumer.rs  task_integration.rs  task_system_demo.rs
des-explore/: Cargo.toml
des-explore/examples/: find_retry_storm.rs  rare_backoff.rs  rare_dep_calls.rs  rare_hedging.rs
des-explore/src/: concurrency.rs  estimate.rs  frontier.rs  harness.rs  io.rs  lib.rs  monitor.rs  policy.rs  policy_search.rs  ready_task.rs  replay_rng.rs  rng.rs  schedule_explore.rs  shared_replay_rng.rs  shared_rng.rs  splitting.rs  stats.rs  trace.rs
des-explore/tests/: estimate_basic.rs  frontier_record_replay.rs  harness_controlled_frontier.rs  harness_controlled_toggles_off.rs  harness_controlled_toggles_off_tokio_ready.rs  harness_controlled_tokio_ready.rs  harness_replay_frontier.rs  harness_replay_tokio_ready.rs  harness_tokio.rs  monitor_basic.rs  mpsc_stream_combinators_record_replay.rs  mpsc_stream_record_replay.rs  network_congestion_open_loop.rs  policy_search_basic.rs  policy_search_v1_additional.rs  policy_search_v1_tokio_ready_end_to_end.rs  provider_wiring.rs  public_api_usage.rs  rare_metastable_admission.rs  rare_metastable_backoff.rs  rare_metastable_dep_calls.rs  rare_metastable_hedging.rs  rare_metastable_network_flapping.rs.bak  replay_accepts_reordered_choice_sets.rs  shared_branching_provider.rs  simple_network_test.rs  splitting_basic.rs  splitting_optimization.rs  thread_patterns_record_replay.rs  trace_io.rs
des-metrics/: Cargo.toml  EXPORT_README.md
des-metrics/src/: error.rs  lib.rs  mmk_time_series.rs  recorder.rs  request_tracker.rs  simulation_metrics.rs
des-metrics/src/export/: csv.rs  json.rs  mod.rs
des-metrics/tests/: integration_new_crates.rs
des-tokio/: Cargo.toml
des-tokio/src/: concurrency.rs  fs.rs  lib.rs  runtime.rs  runtime_internal.rs  stream.rs  task.rs  thread.rs  time.rs
des-tokio/src/sync/: atomic.rs  barrier.rs  batch_semaphore.rs  mod.rs  mpsc.rs  mutex.rs  notify.rs  oneshot.rs  rwlock.rs  semaphore.rs  watch.rs
des-tokio/tests/: admission_control.rs  barrier.rs  basic.rs  interval.rs  join_set.rs  mpsc.rs  mpsc_stream.rs  notify.rs  oneshot.rs  retry_latency.rs  rwlock.rs  select.rs  semaphore.rs  stream_combinators.rs  time_parity.rs  timeout.rs  watch.rs
des-tonic/: Cargo.toml
des-tonic-codegen-test/: Cargo.toml  build.rs
des-tonic-codegen-test/proto/: foo.proto
des-tonic-codegen-test/src/: lib.rs
des-tonic-codegen-test/tests/: codegen_end_to_end.rs
des-tonic/examples/: bidi_chat.rs  open_loop_tower_retry.rs  unary_echo.rs
des-tonic/src/: addr.rs  channel.rs  lib.rs  network.rs  request.rs  router.rs  server.rs  stream.rs  transport.rs  util.rs  wire.rs
des-tonic/tests/: bidi_streaming_end_to_end.rs  client_streaming_end_to_end.rs  network_models.rs  prost_unary_roundtrip.rs  server_streaming_end_to_end.rs  socket_addr_api.rs
des-tower/: Cargo.toml
des-tower/examples/: retry_example.rs  service_builder_demo.rs
des-tower/src/: lib.rs
des-tower/src/tower/: mod.rs
des-tower/src/tower/circuit_breaker/: mod.rs
des-tower/src/tower/discovery/: mod.rs
des-tower/src/tower/hedge/: mod.rs
des-tower/src/tower/limit/: mod.rs
des-tower/src/tower/limit/rate/: mod.rs
des-tower/src/tower/load_balancer/: mod.rs
des-tower/src/tower/retry/: mod.rs
des-tower/src/tower/service/: mod.rs
des-tower/src/tower/timeout/: mod.rs
des-tower/tests/: determinism.rs  retry_integration.rs  service_time_distributions.rs  tower_end_to_end.rs  tower_exponential_traffic.rs  tower_simple_test.rs
des-viz/: Cargo.toml  DESIGN.md
des-viz/src/: error.rs  lib.rs  report.rs
des-viz/src/charts/: latency.rs  mod.rs  percentiles.rs  throughput.rs  time_series.rs  util.rs
des-viz/tests/: des_axum_report_integration.rs
descartes/: Cargo.toml  DESIGN.md  README.md
descartes/examples/: basic_usage.rs
descartes/src/: lib.rs
(+88 files in other folders)
