[workspace]
members = [
    "des-core",
    "des-components",
    "des-metrics",
    "des-viz",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DES Framework Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/des-framework"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt", "time", "macros", "sync"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Visualization
plotters = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"
