[workspace]
members = [
    "descartes",
    "des-core",
    "des-components",
    "des-metrics",
    "des-viz",
    "des-tokio",
    "des-explore",
    "des-tonic",
    "des-tonic-build",
    "des-tower",
    "des-tonic-codegen-test",
    "des-axum",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Rupak Majumdar and Codex"]
license = "Apache-2.0"
repository = "https://github.com/rupakm/DesCartes"
description = "DesCartes: A deterministic, replayable, discrete-event simulator for Rust"
keywords = ["concurrency", "async", "server", "performance"]
categories = ["concurrency", "development-tools::testing"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt", "time", "macros", "sync"] }
tokio-stream = "0.1.15"

# Random number generation
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf
# Keep aligned with the tonic workspace's prost major/minor.
prost = "0.14.3"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Visualization
plotters = "0.3"

# Testing
proptest = "1.4"
criterion = "0.5"

# Tower ecosystem (used by des-tower)
tower = "0.5"
tower-layer = "0.3"
pin-project = "1.1"
atomic-waker = "1.1"

# Metrics
metrics = "0.24.3"
metrics-prometheus = "0.11.0"
hdrhistogram = "7.5.4"
quantiles = "0.7.1"
