[package]
name = "descartes-axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum connectors for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-components = { path = "../des-components" }
descartes-tokio = { path = "../des-tokio" }

axum = "0.7"

bytes = "1.0"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"

serde = { workspace = true }
thiserror = { workspace = true }

bincode = "1.3"

tower = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
descartes-metrics = { path = "../des-metrics" }
descartes-tower = { path = "../des-tower" }
metrics = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
