[package]
name = "descartes-axum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum connectors for DesCartes"

[dependencies]
descartes-core = { version = "0.1.1", path = "../des-core" }
descartes-components = { version = "0.1.1", path = "../des-components" }
descartes-tokio = { version = "0.1.1", path = "../des-tokio" }

axum = "0.7"

bytes = "1.0"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"

serde = { workspace = true }
thiserror = { workspace = true }

bincode = "1.3"

tower = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
descartes-metrics = { version = "0.1.1", path = "../des-metrics" }
descartes-tower = { version = "0.1.1", path = "../des-tower" }
metrics = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
