[package]
name = "descartes-components"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions built on top of DES core primitives"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-metrics = { path = "../des-metrics" }
descartes-tokio = { path = "../des-tokio" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
uuid = { version = "1.19.0", features = ["v7", "serde", "v4"] }

[dev-dependencies]
proptest = { workspace = true }
descartes-viz = { path = "../des-viz" }
plotters = { workspace = true }
