[package]
name = "descartes-explore"
version.workspace = true
edition.workspace = true
description = "Various exploration and record-and-replay utilities for DesCartes"

authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
descartes-core = { path = "../des-core" }
descartes-tokio = { path = "../des-tokio", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
postcard = { version = "1.1", features = ["use-std"] }
rand = { workspace = true }
rand_distr = { workspace = true }
hdrhistogram = { workspace = true }

[dev-dependencies]

[features]
default = ["tokio"]
tokio = ["dep:descartes-tokio"]
