[package]
name = "des-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
des-core = { path = "../des-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Standard metrics ecosystem
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
hdrhistogram = { workspace = true }
quantiles = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
des-tokio = { path = "../des-tokio" }
des-tower = { path = "../des-tower" }
des-tonic = { path = "../des-tonic" }
des-axum = { path = "../des-axum" }
bytes = "1.0"
tonic = "0.12"
axum = "0.7"
