[package]
name = "descartes-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metrics crate for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Standard metrics ecosystem
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
hdrhistogram = { workspace = true }
quantiles = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
descartes-tokio = { path = "../des-tokio" }
descartes-tower = { path = "../des-tower" }
descartes-tonic = { path = "../des-tonic" }
descartes-axum = { path = "../des-axum" }
bytes = "1.0"
tonic = "0.12"
axum = "0.7"
