[package]
name = "descartes-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metrics crate for DesCartes"

[dependencies]
descartes-core = { version = "0.1.1", path = "../des-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Standard metrics ecosystem
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
hdrhistogram = { workspace = true }
quantiles = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
descartes-tokio = { version = "0.1.1", path = "../des-tokio" }
descartes-tower = { version = "0.1.1", path = "../des-tower" }
descartes-tonic = { version = "0.1.1", path = "../des-tonic" }
descartes-axum = { version = "0.1.1", path = "../des-axum" }
bytes = "1.0"
tonic = "0.12"
axum = "0.7"
