[package]
name = "descartes-tokio"
version.workspace = true
edition.workspace = true
description = "tokio interface for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
rand.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
