[package]
name = "descartes-tonic-codegen-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
build = "build.rs"
description = "tonic code generation utilities for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-tokio = { path = "../des-tokio" }
descartes-tonic = { path = "../des-tonic" }

prost = { workspace = true }
tonic = "0.12"

[build-dependencies]
descartes-tonic-build = { path = "../des-tonic-build" }
