[package]
name = "des-tonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
des-core = { path = "../des-core" }
des-tokio = { path = "../des-tokio" }
des-components = { path = "../des-components" }
des-tower = { path = "../des-tower" }

# Tonic types only (no tonic::transport)
tonic = "0.12"
bytes = "1.0"
async-trait = "0.1"
prost = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

# Example-only dependencies
# (kept as dev-deps so des-tonic library stays minimal)
des-explore = { path = "../des-explore" }

# These are used directly by the example (Rust requires direct deps).
tower = { workspace = true }
http = "1.0"
