[package]
name = "descartes-tonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "tonic API utilities for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-tokio = { path = "../des-tokio" }
descartes-components = { path = "../des-components" }
descartes-tower = { path = "../des-tower" }

# Tonic types only (no tonic::transport)
tonic = "0.12"
bytes = "1.0"
async-trait = "0.1"
prost = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

# Example-only dependencies
# (kept as dev-deps so des-tonic library stays minimal)
descartes-explore = { path = "../des-explore" }

# These are used directly by the example (Rust requires direct deps).
tower = { workspace = true }
http = "1.0"
