[package]
name = "descartes-tonic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "tonic API utilities for DesCartes"

[dependencies]
descartes-core = { version = "0.1.1", path = "../des-core" }
descartes-tokio = { version = "0.1.1", path = "../des-tokio" }
descartes-components = { version = "0.1.1", path = "../des-components" }
descartes-tower = { version = "0.1.1", path = "../des-tower" }

# Tonic types only (no tonic::transport)
tonic = "0.12"
bytes = "1.0"
async-trait = "0.1"
prost = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

# Example-only dependencies
# (kept as dev-deps so des-tonic library stays minimal)
descartes-explore = { version = "0.1.1", path = "../des-explore" }

# These are used directly by the example (Rust requires direct deps).
tower = { workspace = true }
http = "1.0"
