[package]
name = "descartes-tower"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "tower API bindings for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-tokio = { path = "../des-tokio" }
descartes-components = { path = "../des-components" }

tokio = { workspace = true }

bytes = "1.0"
http = "1.0"
http-body = "1.0"
pin-project = "1.0"
thiserror = { workspace = true }

# tower ecosystem
tower = { version = "0.5", features = ["full"] }
tower-layer = "0.3"

rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
