[package]
name = "des-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Visualization utilities for DesCartes"

[dependencies]
des-core = { path = "../des-core" }
des-metrics = { path = "../des-metrics" }
thiserror = { workspace = true }
plotters = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
des-axum = { path = "../des-axum" }
des-tokio = { path = "../des-tokio" }
metrics = { workspace = true }
axum = "0.7"
