[package]
name = "descartes-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Visualization utilities for DesCartes"

[dependencies]
descartes-core = { path = "../des-core" }
descartes-metrics = { path = "../des-metrics" }
thiserror = { workspace = true }
plotters = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
descartes-axum = { path = "../des-axum" }
descartes-tokio = { path = "../des-tokio" }
metrics = { workspace = true }
axum = "0.7"
