[package]
name = "descartes-viz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Visualization utilities for DesCartes"

[dependencies]
descartes-core = { version = "0.1.1", path = "../des-core" }
descartes-metrics = { version = "0.1.1", path = "../des-metrics" }
thiserror = { workspace = true }
plotters = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
descartes-axum = { version = "0.1.1", path = "../des-axum" }
descartes-tokio = { version = "0.1.1", path = "../des-tokio" }
metrics = { workspace = true }
axum = "0.7"
