[package]
name = "descartes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core functionality - always included
descartes-core = { version = "0.1.1", path = "../des-core" }
descartes-tokio = { version = "0.1.1", path = "../des-tokio" }
descartes-components = { version = "0.1.1", path = "../des-components" }
descartes-metrics = { version = "0.1.1", path = "../des-metrics" }
descartes-explore = { version = "0.1.1", path = "../des-explore" }


# Optional features for different use cases
descartes-viz = { version = "0.1.1", path = "../des-viz", optional = true }
descartes-tonic = { version = "0.1.1", path = "../des-tonic", optional = true }
descartes-tower = { version = "0.1.1", path = "../des-tower", optional = true }
descartes-axum = { version = "0.1.1", path = "../des-axum", optional = true }

[features]
default = []

# Individual features
viz = ["dep:descartes-viz"]
tonic = ["dep:descartes-tonic"]
tower = ["dep:descartes-tower"]
axum = ["dep:descartes-axum"]

# Convenience feature bundles
full = ["viz", "tonic", "tower", "axum"]
networking = ["tonic", "axum", "tower"]
